force-app/main/default/objects/Placement__c/fields/Move_out_reason__c.field-meta.xml
<CustomField>
    <fullName>Move_out_reason__c</fullName>
    <label>Move out reason</label>
    <type>TextArea</type>
</CustomField>