force-app/main/default/objects/Placement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Request</fullName>
            </value>
            <value>
                <fullName>Request Aborted</fullName>
            </value>
            <value>
                <fullName>Request Refused</fullName>
            </value>
            <value>
                <fullName>Placed Elsewhere</fullName>
            </value>
            <value>
                <fullName>Placement Pending</fullName>
            </value>
            <value>
                <fullName>Placement Active</fullName>
            </value>
            <value>
                <fullName>Placement Inactive</fullName>
            </value>
            <value>
                <fullName>Tentatively Accepted</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>