force-app/main/default/objects/Placement__c/recordTypes/Homelessness.recordType-meta.xml
<RecordType>
    <fullName>Homelessness</fullName>
    <active>true</active>
    <description>This record type specifies the homelessness</description>
    <label>Homelessness</label>
</RecordType>