force-app/main/default/objects/Placement__c/validationRules/Require_Move_Out_Reason_When_Discharge.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Move_Out_Reason_When_Discharge</fullName>
    <active>true</active>
    <description>Ensures Move Out Reason is provided when the Status is set to Discharge.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Discharge&apos;),
    ISBLANK(Move_out_reason__c)
)</errorConditionFormula>
    <errorDisplayField>Move_out_reason__c</errorDisplayField>
    <errorMessage>Move Out Reason is required when Status is Discharge.</errorMessage>
</ValidationRule>